<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kim Dung 3D</string>
    <string name="if_confirm_pay">Khẳng định muốn từ bỏ thanh toán?</string>
    <string name="please_login">Đăng Nhập</string>
    <string name="product_name">Sản phẩm tên：%1$s</string>
    <string name="product_description">Miêu tả：%1$s</string>
    <string name="pay_amount">Nạp tiền：%1$s元</string>
    <string name="alipay">Thanh toán</string>
    <string name="unipay">银联支付</string>
    <string name="pay_after_playing">先玩后付</string>
    <string name="yeepay">易宝支付</string>
    <string name="wxpay">微信支付</string>
    <string name="htpay">浮云支付</string>
    <string name="next_step">Kế tiếp</string>
    <string name="choose_pay_way">请选择支付方式</string>
    <string name="union">银联</string>
    <string name="yee">易宝</string>
    <string name="wechat">微信</string>
    <string name="heitaoB">黑桃币</string>
    <string name="pay_failed">支付失败，msg=%1$s</string>
    <string name="pay_success">支付成功</string>
    <string name="yeepay_submiteed">易宝信息已提交--</string>
    <string name="yeepay_pay_success">易宝支付成功----信息提交成功</string>
    <string name="waiting_for_goods">信息已提交，请等待确认后发货</string>
    <string name="choose_card_amount">请选择充值卡面值金额</string>
    <string name="card_num_cannot_null">充值卡号不能为空</string>
    <string name="card_pwd_cannot_null">充值卡密码不能为空</string>
    <string name="url_cannot_null">url为空或者无效</string>
    <string name="cannot_pay_before_login">未登录状态不能进行支付</string>
    <string name="pay_info_null">支付信息为空</string>
    <string name="pay_initing">初始化支付中···</string>
    <string name="init_pay_failed">初始化支付失败</string>
    <string name="network_error">网络异常，请检查网络后重试</string>
    <string name="init_fail">初始化失败</string>
    <string name="parsStringToMap_error">parsStringToMap异常，error=%1$s</string>
    <string name="init_context_null">初始化Context为空</string>
    <string name="ccmc">中国移动</string>
    <string name="unicom">中国联通</string>
    <string name="egame">中国电信</string>
    <string name="unknown_carrier">未知运营商</string>
    <string name="device_id_context_null">获取设备ID Context为空</string>
    <string name="game_register_photo">Đăng ký</string>
    <string name="not_login">Chưa đăng nhập</string>
    <string name="login_cancel">Đăng nhập hủy bỏ</string>
    <string name="pay_cancel">支付取消</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_info_error">支付信息错误</string>
    <string name="pay_info_identifying">支付结果确认中</string>
    <string name="analysis_error">解析错误</string>
    <string name="request_fail">请求失败</string>
    <string name="alipay_callback">支付宝回调，resultStatus=%1$s</string>
    <string name="inspection_result">检查结果为：%1$s</string>
    <string name="pay_channel_null">支付中心-支付渠道为空</string>
    <string name="order_is_requesting">订单请求中···</string>
    <string name="get_url_null">get请求URL为空</string>
    <string name="post_url_null">post请求URL为空</string>
    <string name="get_request_listener_null">get请求监听为空</string>
    <string name="post_request_listener_null">post请求监听为空</string>
    <string name="subclass_must_overwrite_parent">子类必须重写该方法</string>
    <string name="submit_data_fail">提交统计数据失败，error=%1$s</string>
    <string name="submit_data_success">提交统计数据成功</string>
    <string name="htpay_center">浮云支付中心</string>
    <string name="pro_name">产品名称：</string>
    <string name="pro_des">产品描述</string>
    <string name="pay_money">充值金额：</string>
    <string name="please_choose_pay_way">请选择适合您的充值方式</string>
    <string name="service_hotline">(7x24小时客服热线)</string>
    <string name="cardID">卡号：</string>
    <string name="pwd2">密码：</string>
    <string name="please_input_cardID">请输入卡号</string>
    <string name="amount">面值：</string>
    <string name="please_input_card_amount">Mời lựa chọn thẻ mặt kim ngạch</string>
    <string name="htp_welcome_back">Hoan nghênh trở lại,</string>
    <string name="htp_switch_account">Đổi tài khoản</string>
    <string name="htp_find_bt_phone">Điện thoại tìm lại</string>
    <string name="htp_please_bind_phone">Mời khóa lại điện thoại</string>
    <string name="please_input_old_pwd">Điền Mật khẩu cũ</string>
    <string name="please_input_new_pwd">Điền Mật khẩu mới</string>
    <string name="account_shouldbe_filledin">Tài khoản phải điền</string>
    <string name="pwd_shouldbe_filledin">Mật khẩu phải điền</string>
    <string name="pwd_length_limit">Mật khẩu từ 6~16 kí tự</string>
    <string name="pwd_modifying">Mật khẩu sửa chữa bên trong ···</string>
    <string name="pwd_modified">Đổi Mật khẩu thành công</string>
    <string name="htp_account_cannot_null">Tên không thể để trống</string>
    <string name="htp_pwd_cannot_null">Mật khẩu không thể để trống</string>
    <string name="htp_is_logining">Đăng nhập bên trong ···</string>
    <string name="htp_is_registering">Đăng ký bên trong ···</string>
    <string name="htp_account_start_with_letter">Tài khoản nhất định phải lấy chữ cái mở đầu</string>
    <string name="htp_account_letter_with_number">Tài khoản đều do chữ cái cùng với con số tạo thành</string>
    <string name="htp_account_length">Tài khoản phải từ 4~16 kí tự</string>
    <string name="htp_pwd_length">Mật khẩu phải từ 6~16 kí tự</string>
    <string name="htp_OK">Xác định</string>
    <string name="htp_Cancel">Hủy bỏ</string>
    <string name="htp_cancel_bind_phone">Xác định từ bỏ khóa lại số điện thoại di động?</string>
    <string name="htp_please_input_right_phone">Mời chính xác đưa vào số điện thoại di động</string>
    <string name="htp_get_ing">Thu hoạch bên trong ···</string>
    <string name="htp_send_verfy_success">Nghiệm chứng mã gửi đi thành công</string>
    <string name="htp_register_success">Đăng ký thành công</string>
    <string name="htp_bind_key">m!i@a#o$z%p</string>
    <string name="htp_bind_ing">Khóa lại bên trong ···</string>
    <string name="htp_bind_success">Khóa lại thành công</string>
    <string name="htp_del_account_failed">Tài khoản xóa bỏ thất bại</string>
    <string name="htp_del_account_success">Tài khoản xóa bỏ thành công</string>
    <string name="htp_login_sucess">Đăng nhập thành công</string>
    <string name="htp_please_read">Mời đọc đồng ý</string>
    <string name="htp_first_login_title">Chọn đăng nhập</string>
    <string name="htp_customer_login">Không dùng</string>
    <string name="htp_phone_login">Không Dùng</string>
    <string name="htp_wx_login">Wechat đăng nhập</string>
    <string name="htp_qq_login">QQ đăng nhập</string>
    <string name="htp_heitao_login">Đăng nhập, Đăng ký</string>
    <string name="htp_login">Đăng nhập</string>
    <string name="htp_orther_login">Những phương thức khác đăng nhập</string>
    <string name="htp_customer_register_title">Nhanh đăng ký</string>
    <string name="htp_ok2">Xác thực</string>
    <string name="htp_ht_account_hint">Điền vào lấy chữ cái mở đầu 6–16 kí tự người sử dụng tên</string>
    <string name="htp_ht_pwd_hint">Điền vào 6–16 kí tự tài khoản Mật khẩu</string>
    <string name="htp_ht_privacy_statement1">Ta đã nhìn qua cũng đồng ý</string>
    <string name="htp_ht_privacy_statement2">Mây bay người sử dụng tư ẩn quyền tuyên bố</string>
    <string name="htp_yours">Mời《</string>
    <string name="htp_yours_acpw">》Mật Khẩu:</string>
    <string name="htp_save_photo">Số tài khoản Mật khẩu đã bảo tồn đến thiết bị album ảnh.</string>
    <string name="htp_bind_phone">Khóa Di Động</string>
    <string name="htp_enter_game">Vào game</string>
    <string name="htp_account">Tài Khoản：</string>
    <string name="htp_pwd">Mật khẩu：</string>
    <string name="htp_bind_phone_title">Khóa di động</string>
    <string name="htp_please_input_verfy_code">Điền mã</string>
    <string name="htp_get_verfy_code">Kiểm tra mã</string>
    <string name="htp_please_input_phone">Điền số di động</string>
    <string name="htp_please_input_pwd">Điền Mật khẩu</string>
    <string name="htp_verfy_code_login">Mã đăng nhập</string>
    <string name="htp_registe_new">Đăng ký</string>
    <string name="htp_please_register_title">Đăng ký số điện thoại</string>
    <string name="htp_ht_pwd_hint_phone">Điền 6–16 số điện thoại mật khẩu</string>
    <string name="htp_register">Đăng Ký</string>
    <string name="htp_please_input_ht_account">Điền tài khoản</string>
    <string name="htp_forget_account">Quên tài khoản?</string>
    <string name="htp_forget_pwd">Quên mật khẩu?</string>
    <string name="htp_ht_register_title">Tài khoản đăng ký</string>
    <string name="htp_forget_account_title">Quên tài khoản</string>
    <string name="htp_forget_pwd_title">Quên mật khẩu</string>
    <string name="htp_have_binded">Đã hoàn thành số điện thoại di động khóa lại, mời sử dụng</string>
    <string name="htp_unbinded">"Chưa dùng số điện thoại di động khóa lại,
请联系客服QQ:363707305,即可找回密码。"</string>
    <string name="htp_save_false">Số tài khoản mật khẩu Screenshots bảo tồn đến album ảnh thất bại, mời nhớ kỹ</string>
    <string name="htp_know">Đã biết</string>
    <string name="htp_user_center_title">Trung tâm người dùng</string>
    <string name="htp_user_center_exit">Thoát</string>
    <string name="htp_user_center_switch_account">Đổi số tài khoản</string>
    <string name="htp_user_center_switch_phone">Đổi di động</string>
    <string name="htp_user_center_input_old_phone">Điền số di động cũ</string>
    <string name="htp_user_center_input_new_phone">Điền số di động mới</string>
    <string name="htp_user_center_change_pwd">Đổi mật khẩu</string>
    <string name="htp_find_pw_by_phone">Thông quá điện thoại di động nghiệm chứng mã tìm về mật khẩu</string>
    <string name="loading">Cố gắng đang load, xin sau. . .</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="cc_permit_open_url">Ứng dụng thỉnh cầu mở ra Logo, phải chăng cho phép?</string>
    <string name="cc_permit">Cho phép</string>
    <string name="cc_refuse">Từ Chối</string>
</resources>
