<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="65.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="65.0dip">
        <TextView android:textSize="13.0sp" android:textColor="#ff888888" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/htp_find_pw_by_phone" />
        <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_phone_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:hint="@string/htp_please_input_phone" android:singleLine="true" android:maxLength="16" android:inputType="phone" android:imeOptions="actionNext" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_verfy_code_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/htp_please_input_verfy_code" android:singleLine="true" android:maxLength="16" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|" android:layout_weight="9.0" android:inputType="number" android:imeOptions="actionDone" />
            <TextView android:textSize="13.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:id="@id/htp_get_verfy" android:background="@drawable/htp_button_blue_corner_style" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/htp_get_verfy_code" android:layout_weight="6.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </LinearLayout>
        <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_new_password_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/please_input_new_pwd" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" android:imeOptions="actionNext">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/ht_sure_bt" android:background="@drawable/htp_blue_bt" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="85.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="85.0dip" android:text="@string/htp_ok2" />
</LinearLayout>