<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/htp_login_bg_2" android:layout_width="350.0dip" android:layout_height="242.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageView android:id="@id/ht_login_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/htp_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/htp_heitao_login" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="60.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/ht_login_account_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/htp_please_input_ht_account" android:singleLine="true" android:maxLength="16" android:imeOptions="actionNext" />
            <TextView android:textSize="13.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:id="@id/ht_platform_forget_account_bt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/htp_forget_account" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/ht_login_password_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/htp_please_input_pwd" android:singleLine="true" android:maxLength="16" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|" android:inputType="textPassword" android:imeOptions="actionDone" />
            <TextView android:textSize="13.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:id="@id/ht_platform_forget_pw_bt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/htp_forget_pwd" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="60.0dip">
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ht_platform_register_btn" android:background="@drawable/htp_green_bt" android:layout_width="113.0dip" android:layout_height="40.0dip" android:text="@string/htp_registe_new" android:layout_alignParentLeft="true" />
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ht_platform_login_btn" android:background="@drawable/htp_blue_bt" android:layout_width="113.0dip" android:layout_height="40.0dip" android:text="@string/htp_login" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>