<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/htp_login_bg_2" android:layout_width="350.0dip" android:layout_height="242.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageView android:id="@id/htp_phone_registe_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/htp_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/htp_please_register_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="60.0dip">
        <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_phone_input_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:hint="@string/htp_please_input_phone" android:singleLine="true" android:maxLength="16" android:inputType="phone" android:imeOptions="actionNext" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip">
            <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_verfy_input" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="0.0dip" android:layout_height="30.0dip" android:hint="@string/htp_please_input_verfy_code" android:singleLine="true" android:maxLength="16" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|" android:layout_weight="9.0" android:inputType="number" android:imeOptions="actionDone" />
            <TextView android:textSize="13.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:id="@id/htp_get_verfy_code" android:background="@drawable/htp_button_blue_corner_style" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/htp_get_verfy_code" android:layout_weight="6.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </LinearLayout>
        <EditText android:textSize="15.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_pass_word_input" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="7.0dip" android:hint="@string/htp_ht_pwd_hint_phone" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" android:imeOptions="actionNext" />
    </LinearLayout>
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="60.0dip">
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ht_phone_register_btn" android:background="@drawable/htp_green_bt" android:layout_width="fill_parent" android:layout_height="35.0dip" android:text="@string/htp_register" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/htp_policy_linear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="60.0dip">
        <CheckBox android:layout_gravity="center_vertical" android:id="@id/htp_checkBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/htp_check_box_selector" />
        <TextView android:textSize="10.0sp" android:textColor="#ff888888" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htp_ht_privacy_statement1" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="10.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/htp_statement_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/htp_ht_privacy_statement2" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </LinearLayout>
</LinearLayout>