<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/htp_login_bg_2" android:layout_width="350.0dip" android:layout_height="242.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageView android:id="@id/ht_forget_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/htp_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:gravity="center" android:id="@id/ht_forget_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/htp_forget_pwd_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginLeft="42.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="42.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/binded_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ff888888" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htp_have_binded" />
            <Button android:textSize="12.0sp" android:textColor="#ff6bb4ea" android:layout_gravity="center" android:id="@id/ht_goto_phone_login" android:background="@drawable/htp_button_blue_corner_style" android:layout_width="85.0dip" android:layout_height="26.0dip" android:layout_marginLeft="5.0dip" android:text="@string/htp_phone_login" />
        </LinearLayout>
        <RelativeLayout android:id="@id/unbinded_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="#ff888888" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/htp_unbinded" android:layout_centerInParent="true" android:layout_centerVertical="true" android:lineSpacingExtra="3.0dip" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="60.0dip">
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ht_know_bt" android:background="@drawable/htp_blue_bt" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/htp_know" />
    </RelativeLayout>
</LinearLayout>