<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="65.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="65.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_old_pwd_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/please_input_old_pwd" android:password="true" android:singleLine="true" android:maxLength="16" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|" android:imeOptions="actionDone" />
            <TextView android:textSize="13.0sp" android:textColor="#ff6bb4ea" android:gravity="center" android:id="@id/htp_user_center_forget_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/htp_forget_pwd" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:id="@id/htp_new_pwd_et" android:background="@drawable/htp_public_text_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/please_input_new_pwd" android:password="true" android:singleLine="true" android:maxLength="16" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|" android:imeOptions="actionDone" />
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ht_modify_pwd_btn" android:background="@drawable/htp_blue_bt" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="12.0dip" android:text="@string/htp_ok2" />
    </LinearLayout>
</LinearLayout>